src/less/index.less
:root {
  --surface: hsl(320, 100%, 70%);
  --on-surface: hsl(0, 0%, 0%);
  --accent: hsl(60, 100%, 60%);
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
html {
  background-color: var(--surface);
  width: 100%;
}
body {

  color: var(--on-surface);
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
    "Segoe UI Symbol";
  font-size: 1.125rem;
  line-height: 1.6;

  align-items: center;
  display: flex;
  justify-content: center;
  flex-direction: column;
  min-height: 100%;
  text-align: center;
}
header {
  color: var(--accent);
  position: relative;
  background-color: var(--on-surface);
  background-image: 
    linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.3)),
    url("img/background.jpg");
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  /* Removed background-attachment: fixed - causes issues on iOS Safari */
  
  /* iOS Safari specific fixes */
  -webkit-background-size: cover;
  -webkit-transform: translate3d(0, 0, 0); /* Force hardware acceleration */
  transform: translate3d(0, 0, 0);

  height: 90vh;
  /* iOS Safari viewport height fix */
  min-height: 90vh;
  
  justify-content: center;
  align-items: center;
  display: flex;
  flex-direction: column;
  width: 100%;

  text-wrap: balance;
  padding: 1em;

  h2 {
    max-width: 40em;
  }
}
article {
  justify-content: center;
  align-items: center;
  display: flex;
  flex-direction: column;
  width: 100%;

  a {
    font-weight: bolder;
    &.date {
      font-weight: unset;
    }
  }
}


h1 {
  font-size: 8rem;
  font-weight: 700;
  line-height: 1em;
}

footer {
  background-color: var(--surface);
  top: 0;
  position: fixed;
  width: 100%;
  padding-bottom: env(safe-area-inset-bottom);
}
a {
  color: var(--on-surface);
  text-decoration: none;
  position: relative;
}
a:hover {
  text-decoration: underline;
}
ul {
  display: flex;
  justify-content: space-evenly;
  flex-wrap: wrap;
  margin: 0.3em 0;
}
li {
  display: inline-block;
  list-style: none;
  margin: 0 0.5em;
}
.badge::after {
  content: "";
  width: 1em;
  height: 1em;
  position: absolute;
  background-color: rgb(255, 225, 0);
  clip-path: polygon(
    50% 0%,
    56.798% 29.077%,
    79.389% 9.549%,
    67.798% 37.069%,
    97.553% 34.549%,
    72% 50%,
    97.553% 65.451%,
    67.798% 62.931%,
    79.389% 90.451%,
    56.798% 70.923%,
    50% 100%,
    43.202% 70.923%,
    20.611% 90.451%,
    32.202% 62.931%,
    2.447% 65.451%,
    28% 50%,
    2.447% 34.549%,
    32.202% 37.069%,
    20.611% 9.549%,
    43.202% 29.077%
  );
}

p {
  padding: 1em;
}

.dates {
  padding: 1em;
  text-align: left;
  width: 100%;
  overflow: hidden;

  h3, h4, h5, p, ul, li {
    display: inline;
    margin: 0;
    padding: 0;
    text-wrap: unset;
  }
  h3 {
    margin-right: 0.5em;
  }
  h4 {
    margin-right: 0.5em;
  }
  h5 {
    margin-right: 0.25em;
  }
  p {
    margin-right: 0.5em;
  }
  li::after {
    content: ", ";
  }
  li:last-child::after {
    content: ""; /* no comma at the end */
    margin-right: 0.5em;
  }
 
  ul {
    display: inline;
    list-style: none;
  }
}

.date {
  display: inline;

  &.future {
    background-color: var(--accent);
    font-size: 1.5em;
  }
}

.body--date {
  .date {
    background-color: var(--accent);
    font-size: 1.5em;
  
  }
}

.scroll-down {
    position: absolute;
    bottom: 1em;
    display: none;
}

.has-future {
  .scroll-down {
    display: block;
  }
}

.body--date {
  .scroll-down {
    display: block;
  }
}

.h1--date {
  float: left;
}

